--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta
-      name="description"
+      name="descriptions"
       content="Web Studio. Effective Solutions for Your Business."
     />
     <link
